deploy/kubernetes/services/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  revisionHistoryLimit: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: api
    spec:
      automountServiceAccountToken: false
      containers:
        - name: api
          image: jensdll/image-data-hiding:api.latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: '600m'
              memory: '1Gi'
            limits:
              cpu: '1200m'
              memory: '2Gi'
          ports:
            - containerPort: 80
